# docsforyou

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/http/: CMakeLists.txt  HttpConnection.cpp  HttpConnection.hpp  HttpController.cpp  HttpController.hpp  HttpRequest.hpp  HttpResponse.hpp  Router.cpp  Router.hpp  Server.cpp  Server.hpp
src/repository/: CMakeLists.txt  DocumentRepository.hpp  FileDocumentRepository.cpp  FileDocumentRepository.hpp
src/services/: CMakeLists.txt  CounterService.cpp  CounterService.hpp  DocumentService.cpp  DocumentService.hpp
src/utilities/: utilities.hpp
